--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header>
     <!-- place navbar here -->
     <!-- Nav tabs -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: 2E4F4F;">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
