--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: 2E4F4F;">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
-          Bootstrap
+          <img src="logo1.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+           Krzysztof Domagala
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
