--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   <header>
     <!-- place navbar here -->
     <!-- Nav tabs -->
-    <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: 2E4F4F;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="logo1.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
-           Krzysztof Domagala
-        </a>
+      <img src="logo1.png" alt="" width="50" height="50" class="d-inline-block align-text-top">
+      Krzysztof Domagala
+    </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
