--- a/index.html
+++ b/index.html
@@ -19,23 +19,20 @@
     <!-- Nav tabs -->
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #2E4F4F;">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Menu</a>
+        <a class="navbar-brand" href="#" style="color: #CBE4DE;">Menu</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <ul class="navbar-nav" style="color: #CBE4DE;">
+            <li class="nav-item" style="color: #CBE4DE;">
+              <a class="nav-link active" aria-current="page" href="#">O mnie</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+            <li class="nav-item" style="color: #CBE4DE;">
+              <a class="nav-link" href="#">Projekty</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            <li class="nav-item" style="color: #CBE4DE;">
+              <a class="nav-link" href="#">Kontakt</a>
             </li>
           </ul>
         </div>
@@ -49,9 +46,9 @@
     <!-- place footer here -->
     <footer class="bg-light text-center text-lg-start">
       <!-- Copyright -->
-      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-        © 2023 Copyright:
-        <a class="text-dark" href="https://mdbootstrap.com/">Krzysztof Domagala</a>
+      <div class="text-center p-3" style="background-color: #2E4F4F;">
+        <span style="color: #CBE4DE">© 2023 Copyright:</span>
+        <a class="text" href="https://kris-logic.github.io/resume/" style="color: #CBE4DE;">Krzysztof Domagala</a>
       </div>
       <!-- Copyright -->
     </footer>
