--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
   <header>
     <!-- place navbar here -->
     <!-- Nav tabs -->
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #2E4F4F;">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #2C3333;">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#" style="color: #CBE4DE;">Menu</a>
+        <a class="navbar-brand" href="#" >Menu</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav" style="color: #CBE4DE;">
-            <li class="nav-item" style="color: #CBE4DE;">
-              <a class="nav-link active" aria-current="page" href="#">O mnie</a>
+          <ul class="navbar-nav" >
+            <li class="nav-item" >
+              <a class="nav-link active" aria-current="page" href="#omnie">O mnie</a>
             </li>
-            <li class="nav-item" style="color: #CBE4DE;">
+            <li class="nav-item" ">
               <a class="nav-link" href="#">Projekty</a>
             </li>
-            <li class="nav-item" style="color: #CBE4DE;">
+            <li class="nav-item" >
               <a class="nav-link" href="#">Kontakt</a>
             </li>
           </ul>
@@ -41,14 +41,28 @@
     
   </header>
   <main>
+    <div class="p-5 mb-4 bg-light rounded-3">
+      <div class="container-fluid py-5">
+        <h1 class="display-5 fw-bold" id="omnie">O mnie</h1>
+        <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
+      </div>
+      </div>
+ 
+
+
+
+
+
+
+
 
   </main>
     <!-- place footer here -->
-    <footer class="bg-light text-center text-lg-start">
+    <footer class="bg-dark text-center text-lg-start">
       <!-- Copyright -->
-      <div class="text-center p-3" style="background-color: #2E4F4F;">
-        <span style="color: #CBE4DE">© 2023 Copyright:</span>
-        <a class="text" href="https://kris-logic.github.io/resume/" style="color: #CBE4DE;">Krzysztof Domagala</a>
+      <div class="text-center p-3" style="background-color: #2C3333;">
+        © 2023 Copyright:
+        <a class="link-light" href="https://kris-logic.github.io/resume/">Krzysztof Domagala</a>
       </div>
       <!-- Copyright -->
     </footer>
