--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <!-- place footer here -->
     <footer class="bg-dark text-center text-lg-start">
       <!-- Copyright -->
-      <div class="text-center p-3" style="background-color: #2C3333;">
-        © 2023 Copyright:
+      <div class="text-center p-3 text-light" style="background-color: #2C3333;">
+        © 2020 Copyright:
         <a class="link-light" href="https://kris-logic.github.io/resume/">Krzysztof Domagala</a>
       </div>
       <!-- Copyright -->
