--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a class="nav-link active" aria-current="page" href="#omnie">O mnie</a>
             </li>
             <li class="nav-item" ">
-              <a class="nav-link" href="#">Projekty</a>
+              <a class="nav-link" href="projekty">Projekty</a>
             </li>
             <li class="nav-item" >
               <a class="nav-link" href="#">Kontakt</a>
@@ -41,16 +41,12 @@
     
   </header>
   <main>
-    <div class="p-5 mb-4 bg-light rounded-3">
-      <div class="container-fluid py-5">
+    <div class="p-5" style="background-color: #2E4F4F;">
+      <div class="container-fluid py-5 text-light">
         <h1 class="display-5 fw-bold" id="omnie">O mnie</h1>
         <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
       </div>
       </div>
- 
-
-
-
 
 
 
