--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header>
     <!-- place navbar here -->
     <!-- Nav tabs -->
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #2C3333;">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background-color: #2C3333;">
       <div class="container-fluid">
         <a class="navbar-brand" href="#" >Menu</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,7 +28,7 @@
             <li class="nav-item" >
               <a class="nav-link active" aria-current="page" href="#omnie">O mnie</a>
             </li>
-            <li class="nav-item" ">
+            <li class="nav-item" >
               <a class="nav-link" href="projekty">Projekty</a>
             </li>
             <li class="nav-item" >
@@ -42,11 +42,26 @@
   </header>
   <main>
     <div class="p-5" style="background-color: #2E4F4F;">
-      <div class="container-fluid py-5 text-light">
-        <h1 class="display-5 fw-bold" id="omnie">O mnie</h1>
-        <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
+      <div class="d-flex">
+          <div class="flex-grow-1 ms-3 text-light">
+              <h1 class="display-5 fw-bold" id="omnie">O mnie</h1>
+              <p class="col-md-8 fs-4">This is some content from a media component. You can replace this with any content and adjust it as
+                  needed.</p>
+          </div>
+          <div class="flex-shrink-0">
+              <img src="logo1.png" alt="logo" width="300">
+          </div>
       </div>
+    </div>
+
+    
+    <div class="container-fluid" id="projekty" style="background-color: #0E8388;">
+      <div class="row justify-content-center align-items-center g-2 text-light" style="background-color: #0E8388;">
+        <div class="col">Column</div>
+        <div class="col">Column</div>
+        <div class="col">Column</div>
       </div>
+    </div>
 
 
 
