--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a class="nav-link active" aria-current="page" href="#omnie">O mnie</a>
             </li>
             <li class="nav-item" >
-              <a class="nav-link" href="projekty">Projekty</a>
+              <a class="nav-link" href="#projekty">Projekty</a>
             </li>
             <li class="nav-item" >
               <a class="nav-link" href="#">Kontakt</a>
@@ -49,7 +49,7 @@
                   needed.</p>
           </div>
           <div class="flex-shrink-0">
-              <img src="logo1.png" alt="logo" width="300">
+              <img src="logo1.png" alt="logo" width="250">
           </div>
       </div>
     </div>
