--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header>
     <!-- place navbar here -->
     <!-- Nav tabs -->
-    <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background-color: #2C3333;">
+    <nav class="navbar sticky-top navbar-dark" style="background-color: #2C3333;">
       <div class="container-fluid">
         <a class="navbar-brand" href="#" >Menu</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
