--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <nav>
+    <p class="uxcentral">UXCentral</p>
+  </nav>
   
 </body>
 </html>
