--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+  <!-- navbar -->
   <nav>
-    <p class="uxcentral">UXCentral</p>
+    <a class="logoname"><span class="ux">UX</span> Central</a>
   </nav>
   
 </body>
