--- a/index.html
+++ b/index.html
@@ -11,8 +11,25 @@
 
   <!-- navbar -->
   <nav>
-    <a class="logoname"><span class="ux">UX</span> Central</a>
+    <div class="lewologo">
+      <a class="logoname" href="#"><span class="ux">UX</span> Central</a>
+    </div>
+    <div class="prawologo">
+      <a href="#" class="blogs">Blogs</a>
+      <a href="#" class="about">About</a>
+    </div>
   </nav>
+
+
+  <main>
+
+
+
+
+
+
+
+  </main>
   
 </body>
 </html>
