--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </p>
       </div>
       <div class="zdjecie">
-        <img src="" alt="czlowiek">
+        <img src="lojo.png" alt="czlowiek">
       </div>
     </article>
   </main>
