--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <p class="podpis">
           Join us as we explore the role of UX &amp; Product Design in creating intuitive and impactful products.
         </p>
+        <form method="post">
+          <input class="input1" type="email" name="email" id="email" placeholder="Enter your email">
+        </form>
       </div>
       <div class="zdjecie">
         <img src="lojo.png" alt="czlowiek">
